--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
-  "homepage": ".",
   "name": "mi-portfolio-react",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build && next export",
+    "build": "next build",
     "start": "next start",
     "lint": "next lint",
     "predeploy": "npm run build",
